--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,6 @@ a {
 	text-decoration: none;
 }
 
-
 /*  Header  */
 #header {
 	height: 80px;
@@ -185,4 +184,56 @@ a {
 }
 .add-to-cart a:hover {
 	background-color: #1483c9;
+}
+#page-nav {
+	text-align: center;
+	margin: 20px 0 40px 0;
+	font-family: skranji, san serif;
+	font-size: 44px;
+}
+#page-nav li {
+	display: inline-block;
+	margin-right: 10px;
+}
+#page-nav a {
+	color: #1483c9;
+	font-size: 24px;
+}
+#page-nav a:hover {
+	color: #222;
+}
+
+
+
+/* Footer */
+#footer {
+	text-align: center;
+	background-color: #000;
+	padding: 40px 0 60px 0;
+	color: #fff;
+	font-family: skranji, sans serif;
+	font-size: 24px;
+}
+#footer h3 {
+	margin-bottom: 30px;
+	font-size: 30px;
+}
+#phone {
+	display: inline-block;
+	margin-right: 40px;
+	line-height: 24px;
+}
+#phone img {
+	height: 30px;
+	margin-right: 10px;
+	vertical-align: middle;
+}
+#email {
+	display: inline-block;
+	margin-left: 30px;
+}
+#email img {
+	height: 30px;
+	margin-right: 10px;
+	vertical-align: middle;
 }
